--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0     http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fatwire.gst</groupId>
@@ -7,7 +7,7 @@
     </parent>
     <groupId>com.fatwire.gst</groupId>
     <artifactId>gst-calltemplate</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>FatWire GST: Enhanced CallTemplate</name>
     <url>http://www.nl.fatwire.com/dta/contrib/gst-calltemplate</url>
@@ -18,9 +18,9 @@
         </developer>
     </developers>
     <scm>
-        <connection>scm:svn:http://www.nl.fatwire.com/viewvc/dta/contrib/gst-calltemplate/tags/gst-calltemplate-1.0</connection>
-        <developerConnection>scm:svn:http://www.nl.fatwire.com/svn/dta/contrib/gst-calltemplate/tags/gst-calltemplate-1.0</developerConnection>
-        <url>http://www.nl.fatwire.com/viewvc/dta/contrib/gst-calltemplate/tags/gst-calltemplate-1.0</url>
+        <connection>scm:svn:http://www.nl.fatwire.com/viewvc/dta/contrib/gst-calltemplate/trunk/gsf-calltemplate</connection>
+        <developerConnection>scm:svn:http://www.nl.fatwire.com/svn/dta/contrib/gst-calltemplate/trunk</developerConnection>
+        <url>http://www.nl.fatwire.com/viewvc/dta/contrib/gst-calltemplate/trunk</url>
     </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
